--- a/avatarimage/src/main/res/layout/activity_main.xml
+++ b/avatarimage/src/main/res/layout/activity_main.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.chilik1020.customviews.avatarview.AvatarImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp" />
+    <com.chilik1020.customviews.avatarimage.AvatarImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/avatar_img" />
 
 </LinearLayout>
