--- a/avatarimage/src/main/res/layout/activity_main.xml
+++ b/avatarimage/src/main/res/layout/activity_main.xml
@@ -8,8 +8,9 @@
     tools:context=".MainActivity">
 
     <com.chilik1020.customviews.avatarimage.AvatarImageView
+        android:id="@+id/aivUserAvatar"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/avatar_img" />
+        android:src="@drawable/avatar_img"/>
 
 </LinearLayout>
