--- a/avatarimage/src/main/res/values/attrs.xml
+++ b/avatarimage/src/main/res/values/attrs.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="AvatarImageView">
+    <declare-styleable name="AvatarImageViewMask">
+        <attr name="aiv_borderColor" format="color"/>
+        <attr name="aiv_borderWidth" format="dimension"/>
+        <attr name="aiv_initials" format="string"/>
+    </declare-styleable>
+
+    <declare-styleable name="AvatarImageViewShader">
         <attr name="aiv_borderColor" format="color"/>
         <attr name="aiv_borderWidth" format="dimension"/>
         <attr name="aiv_initials" format="string"/>
