--- a/avatarimage/src/main/res/layout/activity_main.xml
+++ b/avatarimage/src/main/res/layout/activity_main.xml
@@ -3,23 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <com.chilik1020.customviews.avatarimage.AvatarImageViewMask
         android:id="@+id/aivUserAvatar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/avatar_img" />
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/avatar_img_v" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="20dp" />
 
     <com.chilik1020.customviews.avatarimage.AvatarImageViewShader
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/avatar_img" />
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/avatar_img_v" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
+
+    <com.chilik1020.customviews.avatarimage.AvatarImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/avatar_img_v"
+        app:aiv_initials="AD"
+         />
 
 </LinearLayout>
